# python-template

./: .coveragerc  .pre-commit-config.yaml  .secrets.baseline  README.md  fabfile.py  pyproject.toml
.github/workflows/: main.yml
tests/: test_minimal.py
